--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,4 +1,35 @@
 {{>layout/header}}
 <body>
-<h1>중고 악기 판매 사이트입니다</h1>
+<h1>중고 악기 판매 사이트</h1>
+<div class="col-md-12">
+    <div class="row">
+        {{#userName}}
+            Logged in as: <span id="user">{{userName}}</span>
+            <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+        {{/userName}}
+        {{^userName}}
+            <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+        {{/userName}}
+    </div>
+    <table class="table table-horizontal table-bordered">
+        <thead class="thead-strong">
+        <tr>
+            <th>게시글번호</th>
+            <th>제목</th>
+            <th>가격</th>
+            <th>작성자</th>
+        </tr>
+        </thead>
+        <tbody id="tbody">
+        {{#posts}}
+            <tr>
+                <td>{{id}}</td>
+                <td>{{title}}</td>
+                <td>{{price}}</td>
+                <td>{{user}}</td>
+            </tr>
+        {{/posts}}
+        </tbody>
+    </table>
+</div>
 {{>layout/footer}}
