--- a/src/main/resources/templates/post-save.mustache
+++ b/src/main/resources/templates/post-save.mustache
@@ -5,8 +5,7 @@
     <form>
         <div class="form-group">
             <label for="title">제목</label>
-            <input type="text" class="form-control"
-                   id="title" placeholder="제목을 입력하십시오">
+            <input type="text" class="form-control" id="title" placeholder="제목을 입력하십시오">
         </div>
         <div class="form-group">
             <label for="category">카테고리</label>
@@ -44,18 +43,22 @@
             </form>
         </div>
         <div class="form-group">
+            <label for="user">작성자</label>
+            <input type="text" class="form-control" id="user" value="{{user}}" readonly>
+        </div>
+        <div class="form-group">
             <label for="price">가격</label>
-            <input type="number" class="form-control"
-                   id="price" placeholder="가격을 입력하십시오">
+            <input type="number" class="form-control" id="price" placeholder="가격을 입력하십시오">
         </div>
         <div class="form-group">
             <label for="content">내용</label>
-            <textarea type="text" class="form-control"
-                      id="content" placeholder="내용을 입력하십시오"></textarea>
+            <textarea type="text" class="form-control" id="content" placeholder="내용을 입력하십시오"></textarea>
+        </div>
+        <div class="form-group">
+            <input type="file" id="images"/>
         </div>
     </form>
     <a href="/" role="button" class="btn btn-secondary">취소</a>
     <button type="button" class="btn btn-primary" id="btn-save">등록</button>
 </div>
-</body>
 {{>layout/footer}}
