--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -3,13 +3,13 @@
 <h1>중고 악기 판매 사이트</h1>
 <div class="col-md-12">
     <div class="row">
-        {{#userName}}
-            Logged in as: <span id="user">{{userName}}</span>
+        {{#user}}
+            Logged in as: <span id="user">{{name}}</span>
             <a href="/logout" class="btn btn-info active" role="button">Logout</a>
-        {{/userName}}
-        {{^userName}}
+        {{/user}}
+        {{^user}}
             <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
-        {{/userName}}
+        {{/user}}
     </div>
     <table class="table table-horizontal table-bordered">
         <thead class="thead-strong">
@@ -18,18 +18,44 @@
             <th>제목</th>
             <th>가격</th>
             <th>작성자</th>
+            <th>등록 일자</th>
         </tr>
         </thead>
         <tbody id="tbody">
         {{#posts}}
             <tr>
-                <td>{{id}}</td>
-                <td>{{title}}</td>
-                <td>{{price}}</td>
-                <td>{{user}}</td>
+                <td>{{postNo}}</td>
+                <td><a href="/post?no={{postNo}}">{{title}}</a></td>
+                <td>{{price}}만원</td>
+                <td>{{userName}}</td>
+                <td>{{regDt}}</td>
             </tr>
         {{/posts}}
         </tbody>
     </table>
+    <div class="form-group">
+        <label for="category">카테고리</label>
+        <form>
+            <select id="upper-category">
+                {{#upper-category}}
+                    <option value={{upperCategoryNo}}>{{name}}</option>
+                {{/upper-category}}
+            </select>
+            <select id="lower-category"></select>
+            <select id="brand"></select>
+        </form>
+    </div>
+    <div class="form-group">
+        <label for="local">지역</label>
+        <form>
+            <select id="upper-local">
+                {{#upper-local}}
+                    <option value="{{upperLocalNo}}">{{name}}</option>
+                {{/upper-local}}
+            </select>
+            <select id="lower-local"></select>
+        </form>
+    </div>
+    <button type="button" class="btn btn-primary" id="btn-search">검색</button>
 </div>
 {{>layout/footer}}
