Make post.mustache, post.js and post-update.mustache for view page and refactor mapping of updateSoldYN from PATCH to GET

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -18,6 +18,7 @@
             <th>제목</th>
             <th>가격</th>
             <th>작성자</th>
+            <th>판매 여부</th>
             <th>등록 일자</th>
         </tr>
         </thead>
@@ -28,6 +29,7 @@
                 <td><a href="/post?no={{postNo}}" id="post-select">{{title}}</a></td>
                 <td>{{price}}만원</td>
                 <td>{{userName}}</td>
+                <td>{{soldYN}}</td>
                 <td>{{regDt}}</td>
             </tr>
         {{/posts}}
@@ -35,7 +37,7 @@
     </table>
     <div class="form-group">
         <label for="category">카테고리</label>
-        <form>
+        <div>
             <select id="upper-category">
                 {{#upper-category}}
                     <option value={{upperCategoryNo}}>{{name}}</option>
@@ -43,18 +45,18 @@
             </select>
             <select id="lower-category"></select>
             <select id="brand"></select>
-        </form>
+        </div>
     </div>
     <div class="form-group">
         <label for="local">지역</label>
-        <form>
+        <div>
             <select id="upper-local">
                 {{#upper-local}}
                     <option value="{{upperLocalNo}}">{{name}}</option>
                 {{/upper-local}}
             </select>
             <select id="lower-local"></select>
-        </form>
+        </div>
     </div>
     <button type="button" class="btn btn-primary" id="btn-search">검색</button>
 </div>
