--- a/src/main/resources/templates/post-save.mustache
+++ b/src/main/resources/templates/post-save.mustache
@@ -9,7 +9,7 @@
         </div>
         <div class="form-group">
             <label for="category">카테고리</label>
-            <form>
+            <div>
                 <select id="upper-category">
                     {{#upper-category}}
                         <option value={{upperCategoryNo}}>{{name}}</option>
@@ -17,18 +17,18 @@
                 </select>
                 <select id="lower-category"></select>
                 <select id="brand"></select>
-            </form>
+            </div>
         </div>
         <div class="form-group">
             <label for="local">지역</label>
-            <form>
+            <div>
                 <select id="upper-local">
                     {{#upper-local}}
                         <option value="{{upperLocalNo}}">{{name}}</option>
                     {{/upper-local}}
                 </select>
                 <select id="lower-local"></select>
-            </form>
+            </div>
         </div>
         <div class="form-group">
             <label for="user">작성자</label>
