--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -35,6 +35,7 @@
         {{/posts}}
         </tbody>
     </table>
+    <a href="/post/save" role="button" class="btn btn-primary">글 등록</a>
     <div class="form-group">
         <label for="category">카테고리</label>
         <div>
