--- a/src/main/resources/templates/post-update.mustache
+++ b/src/main/resources/templates/post-update.mustache
@@ -25,38 +25,47 @@
             <select id="lower-local"></select>
         </div>
     </div>
-        <form>
-            {{#post}}
-                <div class="form-group">
-                    <label for="postNo">글 번호</label>
-                    <input type="text" class="form-control" id="postNo" value="{{postNo}}" readonly>
-                </div>
-                <div class="form-group">
-                    <label for="title">제목</label>
-                    <input type="text" class="form-control" id="title" value="{{title}}">
-                </div>
-            {{/post}}
+    <form>
+        {{#post}}
             <div class="form-group">
-                <label for="user">작성자</label>
-                {{#user}}
-                    <input type="text" class="form-control" id="user" value="{{name}}" name="{{userNo}}" readonly>
-                {{/user}}
+                <label for="postNo">글 번호</label>
+                <input type="text" class="form-control" id="postNo" value="{{postNo}}" readonly>
             </div>
+            <div class="form-group">
+                <label for="title">제목</label>
+                <input type="text" class="form-control" id="title" value="{{title}}">
+            </div>
+        {{/post}}
+        <div class="form-group">
+            <label for="user">작성자</label>
+            {{#user}}
+                <input type="text" class="form-control" id="user" value="{{name}}" name="{{userNo}}" readonly>
+            {{/user}}
+        </div>
+        <div class="form-group">
+            <label for="price">가격</label>
             {{#post}}
-                <div class="form-group">
-                    <label for="price">가격</label>
-                    <input type="number" class="form-control" id="price" value="{{price}}">
-                </div>
-                <div class="form-group">
-                    <label for="content">내용</label>
-                    <textarea type="text" class="form-control" id="content">{{content}}</textarea>
-                </div>
-                <div class="form-group">
-                    <input type="file" id="images"/>
-                </div>
-            </form>
-            <a href="/post?no={{postNo}}" role="button" class="btn btn-secondary">취소</a>
-            <button type="button" class="btn btn-primary" id="btn-update">수정</button>
+                <input type="number" class="form-control" id="price" value="{{price}}">
             {{/post}}
+        </div>
+        <div class="form-group">
+            <label for="content">내용</label>
+            <div>
+                {{#images}}
+                    <img src="/upload/{{path}}">
+                {{/images}}
+                {{#post}}
+                    <textarea type="text" class="form-control" id="content">{{content}}</textarea>
+                {{/post}}
+            </div>
+        </div>
+        <div class="form-group">
+            <input type="file" id="images"/>
+        </div>
+    </form>
+    {{#post}}
+        <a href="/post?no={{postNo}}" role="button" class="btn btn-secondary">취소</a>
+    {{/post}}
+    <button type="button" class="btn btn-primary" id="btn-update">수정</button>
 </div>
 {{>layout/footer}}
