--- a/src/main/resources/templates/post.mustache
+++ b/src/main/resources/templates/post.mustache
@@ -5,7 +5,7 @@
 <div class="col-md-12">
     <div class="row">
         {{#user}}
-            Logged in as: <span id="user">{{name}}</span>
+            Logged in as: <span id="user">{{userNo}} {{name}}</span>
             <a href="/logout" class="btn btn-info active" role="button">Logout</a>
         {{/user}}
         {{^user}}
@@ -48,6 +48,26 @@
                 </tbody>
             </table>
     </form>
+    <from>
+        <label for="comment">댓글</label>
+        <div class="form-group">
+            <div class="form-group">
+                <textarea type="text" class="form-control" id="comment" placeholder="댓글을 입력하십시오"></textarea>
+                <button type="button" class="btn btn-primary" id="btn-comment">댓글 등록</button>
+            </div>
+            <table class="table table-horizontal table-bordered">
+                <tbody class="tread-strong">
+                {{#comments}}
+                    <tr>
+                        <td>{{userName}}</td>
+                        <td>{{content}}</td>
+                        <td>{{regDt}}</td>
+                    </tr>
+                {{/comments}}
+                </tbody>
+            </table>
+        </div>
+    </from>
     <div id="btn-selector">
         <a href="/" role="button" class="btn btn-primary">뒤로가기</a>
     </div>
