--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -40,24 +40,40 @@
         <label for="category">카테고리</label>
         <div>
             <select id="upper-category">
+                <option>전체</option>
                 {{#upper-category}}
                     <option value={{upperCategoryNo}}>{{name}}</option>
                 {{/upper-category}}
             </select>
-            <select id="lower-category"></select>
-            <select id="brand"></select>
+            <select id="lower-category">
+                <option>전체</option>
+            </select>
+            <select id="brand">
+                <option>전체</option>
+            </select>
         </div>
     </div>
     <div class="form-group">
         <label for="local">지역</label>
         <div>
             <select id="upper-local">
+                <option>전체</option>
                 {{#upper-local}}
                     <option value="{{upperLocalNo}}">{{name}}</option>
                 {{/upper-local}}
             </select>
-            <select id="lower-local"></select>
+            <select id="lower-local">
+                <option>전체</option>
+            </select>
         </div>
+    </div>
+    <div class="form-group">
+        <input type="text" id="keyword" placeholder="검색어 입력">
+        <select id="keyword-select">
+            <option>제목</option>
+            <option>내용</option>
+            <option>제목+내용</option>
+        </select>
     </div>
     <button type="button" class="btn btn-primary" id="btn-search">검색</button>
 </div>
