IndexController에 search 페이지 등록. 검색 동적 쿼리 생성을 위해 PostSpecification 등록

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -35,7 +35,7 @@
         {{/posts}}
         </tbody>
     </table>
-    <a href="/post/save" role="button" class="btn btn-primary">글 등록</a>
+    <a href="/post/save/page" role="button" class="btn btn-primary">글 등록</a>
     <div class="form-group">
         <label for="category">카테고리</label>
         <div>
