PostSpecification의 postSearch 내에서 Join 연결 안되는 것 해결

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -75,6 +75,10 @@
             <option>제목+내용</option>
         </select>
     </div>
+    <div>
+        <lable for="price">가격</lable>
+        <input id="minPrice" type="text"> 만원 ~ <input id="maxPrice" type="text"> 만원
+    </div>
     <button type="button" class="btn btn-primary" id="btn-search">검색</button>
 </div>
 {{>layout/footer}}
