--- a/src/main/resources/templates/post.mustache
+++ b/src/main/resources/templates/post.mustache
@@ -1,6 +1,6 @@
 {{>layout/header}}
 <body onload="userCheck()">
-<script src="/js/app/post.js"></script>
+<script src="/js/post.js"></script>
 <h1>게시글</h1>
 <div class="col-md-12">
     <div class="row">
