--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -70,9 +70,8 @@
     <div class="form-group">
         <input type="text" id="keyword" placeholder="검색어 입력">
         <select id="keyword-select">
-            <option>제목</option>
-            <option>내용</option>
-            <option>제목+내용</option>
+            <option value="title">제목</option>
+            <option value="content">내용</option>
         </select>
     </div>
     <div>
