IndexController의 search 메소드 완성

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -26,7 +26,7 @@
         {{#posts}}
             <tr>
                 <td>{{postNo}}</td>
-                <td><a href="/post?no={{postNo}}" id="post-select">{{title}}</a></td>
+                <td><a href="/post/page?no={{postNo}}" id="post-select">{{title}}</a></td>
                 <td>{{price}}만원</td>
                 <td>{{userName}}</td>
                 <td>{{soldYN}}</td>
